feat: Add relative url resolution to HttpUrlRequest